[package]
name = "galileo_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"

# irondash
irondash_texture = "*"
irondash_run_loop = "*"
irondash_engine_context = "*"
irondash_dart_ffi = "*"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
